fix(ui): horizontal scrollbar for sidebar menu, faster  ace editor, close session expiration alert after login

--- a/ui/src/assets/style/layout/sidebar/_sidebar-base.scss
+++ b/ui/src/assets/style/layout/sidebar/_sidebar-base.scss
@@ -19,7 +19,7 @@
         width: 100%;
 
         .app-sidebar-scroll {
-            width: 100%;
+            width: 90%;
             height: 100%;
         }
     }
