--- a/ui/src/assets/style/layout/sidebar/modifiers/_closed-sidebar.scss
+++ b/ui/src/assets/style/layout/sidebar/modifiers/_closed-sidebar.scss
@@ -12,7 +12,7 @@
           display: none;
     }
     .sidebar-menu {
-      padding: 0 calc($layout-spacer-x / 3);
+      padding: 0;
 
       .menu-header {
         text-indent: -999em;
